[package]
name = "rust-g"
edition = "2021"
version = "3.6.0"
authors = [
    "Bjorn Neergaard <bjorn@neersighted.com>",
    "Tad Hardesty <tad@platymuus.com>",
    "rust-g maintainer team",
]
repository = "https://github.com/tgstation/rust-g"
license = "MIT"
description = "Offloaded task library for the /tg/ Space Station 13 codebase"
rust-version = "1.81"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = true

[dependencies]
thiserror = "2.0"
flume = { version = "0.11", optional = true }
chrono = { version = "0.4", optional = true }
base64 = { version = "0.22", optional = true }
md-5 = { version = "0.10", optional = true }
twox-hash = { version = "2.1", optional = true }
const-random = { version = "0.1.18", optional = true }
sha-1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
percent-encoding = { version = "2.3", optional = true }
url-dep = { version = "2.5", package = "url", optional = true }
png = { version = "0.17", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = [
    "png",
] }
gix = { version = "0.70", optional = true, default-features = false, features = [
    "revision",
    "max-performance-safe",
] }
noise = { version = "0.9", optional = true }
redis = { version = "0.28", optional = true, features = ["ahash"] }
ureq = { version = "3.0", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
once_cell = { version = "1.20", optional = true }
mysql = { git = "https://github.com/ZeWaka/rust-mysql-simple.git", tag = "v26.0.0", default-features = false, optional = true }
dashmap = { version = "6.1", optional = true, features = ["rayon", "serde"] }
zip = { version = "2.2", optional = true }
rand = { version = "0.9", optional = true }
toml-dep = { version = "0.8.19", package = "toml", optional = true }
aho-corasick = { version = "1.1", optional = true }
rayon = { version = "1.10", optional = true }
dbpnoise = { version = "0.1.2", optional = true }
pathfinding = { version = "4.13", optional = true }
num-integer = { version = "0.1.46", optional = true }
dmi = { version = "0.3.7", optional = true }
tracy_full = { version = "1.10.0", optional = true }
ammonia = { version = "4.0.0", optional = true }
fast_poisson = { version = "=0.5.2", optional = true, features = [
    "single_precision",
] } # Higher versions have problems with x86 due to 'kiddo'.
symphonia = { version = "0.5.4", optional = true, features = [
    "all-codecs",
] }

[features]
default = [
    "acreplace",
    "batchnoise",
    "cellularnoise",
    "dmi",
    "file",
    "git",
    "hash",
    "http",
    "iconforge",
    "json",
    "log",
    "noise",
    "rustls_tls",
    "sanitize",
    "sound_len",
    "sql",
    "time",
    "toml",
    "url",
]

all = [
    "acreplace",
    "batchnoise",
    "cellularnoise",
    "dmi",
    "file",
    "git",
    "hash",
    "http",
    "iconforge",
    "json",
    "log",
    "noise",
    "rustls_tls",
    "sanitize",
    "sound_len",
    "sql",
    "time",
    "toml",
    "url",
    "pathfinder",
    "poissonnoise",
    "redis_pubsub",
    "redis_reliablequeue",
    "unzip",
    "worleynoise",
]

# default features
acreplace = ["aho-corasick"]
batchnoise = ["dbpnoise"]
cellularnoise = ["rand", "rayon"]
dmi = ["png", "image", "dep:dmi"]
file = []
git = ["gix", "chrono"]
hash = [
    "base64",
    "const-random",
    "md-5",
    "hex",
    "sha-1",
    "sha2",
    "twox-hash",
    "serde",
    "serde_json",
]
http = ["ureq", "serde", "serde_json", "once_cell", "jobs"]
iconforge = [
    "dashmap",
    "dep:dmi",
    "hash",
    "image",
    "jobs",
    "once_cell",
    "png",
    "rayon",
    "serde",
    "serde_json",
    "tracy_full",
    "twox-hash",
]
json = ["serde", "serde_json"]
log = ["chrono"]
sanitize = ["ammonia", "serde_json"]
sound_len = ["symphonia"]
sql = ["mysql", "serde", "serde_json", "once_cell", "dashmap", "jobs"]
time = []
toml = ["serde", "serde_json", "toml-dep"]
url = ["url-dep", "percent-encoding"]

# additional features
pathfinder = ["num-integer", "pathfinding", "serde", "serde_json"]
poissonnoise = ["fast_poisson"]
redis_pubsub = ["flume", "redis", "serde", "serde_json"]
redis_reliablequeue = ["flume", "redis", "serde", "serde_json"]
unzip = ["zip", "jobs"]
worleynoise = ["rand", "rayon"]

# Use the native tls stack for the mysql db
native_tls = ["mysql/default", "mysql/native-tls"]
rustls_tls = ["mysql/default-rust", "mysql/rustls-tls-ring"]

# internal feature-like things
jobs = ["flume"]
allow_non_32bit = []

[dev-dependencies]
regex = "1"
